@@ -2,6 +2,8 @@ Revision history for perl distribution Convos
 
 0.99_22 Not Released
  - Fix use of CONVOS_ORGANIZATION_URL #307
+ - Change "Profile" to open in main dialog area
+ - Change "Help" to open in main dialog area
  - Tweaking colors
 
 0.99_21 2017-01-08T14:41:21+0100
